--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "venv/bin/python",
+    "python.pythonPath": "/usr/local/bin/python3",
     "python.testing.unittestArgs": [
         "-v",
         "-s",
