--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,51 @@
+appdirs==1.4.4
 appnope==0.1.0
+astroid==2.3.3
 backcall==0.1.0
-bcrypt==3.1.4
+bcrypt==3.1.7
 blinker==1.4
-cffi==1.11.5
+cffi==1.14.0
 Click==7.0
 decorator==4.3.0
-Faker==0.9.1
-Flask==1.0.2
+distlib==0.3.0
+dnspython==2.0.0
+email-validator==1.1.2
+filelock==3.0.12
+Flask==1.1.2
 Flask-Bcrypt==0.7.1
-Flask-DebugToolbar==0.10.1
-Flask-SQLAlchemy==2.3.2
-Flask-WTF==0.14.2
-ipython==7.0.1
+Flask-Cors==3.0.8
+Flask-DebugToolbar==0.11.0
+Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
+gunicorn==20.0.4
+idna==2.10
+ipython==7.13.0
 ipython-genutils==0.2.0
+isort==4.3.21
 itsdangerous==0.24
-jedi==0.13.1
-Jinja2==2.10
+jedi==0.16.0
+Jinja2==2.11.2
+lazy-object-proxy==1.4.3
 MarkupSafe==1.0
+mccabe==0.6.1
 parso==0.3.1
-pexpect==4.6.0
+pbr==5.4.5
+pexpect==4.8.0
 pickleshare==0.7.5
-prompt-toolkit==2.0.5
-psycopg2-binary==2.8.4
+prompt-toolkit==3.0.5
+psycopg2-binary==2.8.6
 ptyprocess==0.6.0
 pycparser==2.19
-Pygments==2.2.0
-python-dateutil==2.7.3
-simplegeneric==0.8.1
+Pygments==2.6.1
+pylint==2.4.4
 six==1.11.0
-SQLAlchemy==1.2.12
-text-unidecode==1.2
-traitlets==4.3.2
+SQLAlchemy==1.3.22
+stevedore==1.32.0
+traitlets==4.3.3
+virtualenv==20.0.21
+virtualenv-clone==0.5.4
+virtualenvwrapper==4.8.4
 wcwidth==0.1.7
-Werkzeug==0.14.1
-WTForms==2.2.1
+Werkzeug==1.0.1
+wrapt==1.11.2
+WTForms==2.3.3
